--- a/src/Components/4-ServicesSection/ServicesSection.scss
+++ b/src/Components/4-ServicesSection/ServicesSection.scss
@@ -53,6 +53,9 @@
 
         .col {
             grid-column: span 3;
+                &:nth-of-type(4) {
+                    margin-bottom: 350px; 
+                }
         }
     }
 }
